# sandcam

./: .dockerignore  .gitignore  Dockerfile  README.md  ai_guide.py  creatures.py  cv_detector.py  cv_interaction.py  cv_object_store.py  depth_source.py  interaction_engine.py  main.py  pyproject.toml  renderer.py  sandcam-settings.json  setup-windows.ps1  test_ai_guide.py  test_vision.py  ui.py  webcam_observer.py
assets/creatures/: shark.json
