[project]
name = "sandcam"
version = "0.1.0"
description = "AR sandbox POC — mouse-sculpted terrain with elevation rendering"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "opencv-contrib-python>=4.11.0.86",
    "pygame>=2.6.1",
    "scipy>=1.17.1",
    "ultralytics>=8.4.33",
]
